devscripts (2.14.0) UNRELEASED; urgency=low

  [ Jakub Wilk ]
  * Add sadt, a simple implementation of DEP-8 test runner (closes: #712095).

  [ James McCoy ]
  * chdist: Ensure error messages end with an EOL.  (Closes: #734307)
  * licensecheck: Add handling for a variation of 3 clause BSD.
  * rc-alert:
    + Ensure the tag/dist description order is stable.  (Closes: #735286)
    + Automatically determine what the ignore tag means, instead of
      hard-coding dist names.
  * uscan:
    + Download the PGP signature the same way the archive was downloaded.
      (Closes: #735085, #736476)
    + Skip the watchfile line if pgpsigurlmangle is defined but
      upstream-signing-key.pgp is missing.  (Closes: #735084)
    + Update the GitHub example.  Based on a patch by YABUKI Yukiharu.
      (Closes: #728182)
    + Support escaped characters in the Files-Excluded patterns.  Thanks to
      Csillag Tamas and Russ Albery for the patch.  (Closes: #733111)
    + Move keyring location for signature verification under debian/upstream/.
    + Use the armored keyring debian/upstream/signing-key.asc for signature
      verification if the unarmored keyring doesn't exist.  (Closes: #720957)
    + Fix regex in get_main_source_dir.  (Closes: #735906)

 -- Jakub Wilk <jwilk@debian.org>  Fri, 27 Dec 2013 18:39:11 +0100

devscripts (2.13.9) unstable; urgency=low

  [ Martin Pitt ]
  * autopkgtest: Add "allow-stderr" restriction to avoid failing tests because
    of the HTTP server log on stderr.

  [ James McCoy ]
  * uscan:
    + Repack the tarball and verify it is a compressed archive without
      allowing arbitrary code execution.  Fixes CVE-2013-6888.
    + Use find's -exec to call rm directly instead of piping to xargs.
      (Closes: #732006, CVE-2013-7085)
    + Follow tar's recommended security practices
      - Use --keep-old-files --no-overwrite-dir
      - Ensure parent directory of directory used for repacking archive isn't
        accessible to other users.